@@ -25,11 +25,10 @@ public class EventController {
         this.eventTypeRepository = eventTypeRepository;
     }
 
-    // --------------------- GET ALL ---------------------
+    // --------------------- GET ALL EVENTS ---------------------
     @GetMapping
     public ResponseEntity<List<Map<String, Object>>> getAllEvents() {
         List<Event> events = eventService.getAllEvents();
-
         List<Map<String, Object>> serialized = events.stream().map(ev -> {
             Map<String, Object> map = new java.util.HashMap<>();
             map.put("id", ev.getId());
@@ -37,9 +36,9 @@ public class EventController {
             map.put("startDate", ev.getStartDate());
             map.put("endDate", ev.getEndDate());
             map.put("calendar", ev.getCalendarLevel());
-            map.put("place", ev.getPlace()); // peut être null
-            map.put("ageMin", ev.getAgeMin()); // peut être null
-            map.put("ageMax", ev.getAgeMax()); // peut être null
+            map.put("place", ev.getPlace());
+            map.put("ageMin", ev.getAgeMin());
+            map.put("ageMax", ev.getAgeMax());
 
             if (ev.getEventType() != null) {
                 Map<String, Object> typeMap = new java.util.HashMap<>();
@@ -50,46 +49,50 @@ public class EventController {
                 map.put("eventType", null);
             }
 
-            if (ev.getCibles() != null) {
-                map.put("cibles", ev.getCibles().stream().map(Enum::name).toList());
-            } else {
-                map.put("cibles", null);
-            }
+            map.put("cibles", ev.getCibles() != null ? ev.getCibles().stream().map(Enum::name).toList() : null);
 
             return map;
         }).toList();
 
-
         return ResponseEntity.ok(serialized);
     }
 
-
-    // --------------------- CREATE ---------------------
+    // --------------------- CREATE EVENT ---------------------
     @PostMapping
     public ResponseEntity<Event> createEvent(@RequestBody Map<String, Object> payload) {
         try {
+            // Validate basic fields
+            String title = (String) payload.get("title");
+            if (title == null || title.trim().isEmpty()) {
+                throw new RuntimeException("Title is required");
+            }
+
             Event event = new Event();
-            event.setTitle((String) payload.get("title"));
-            event.setStartDate(LocalDate.parse((String) payload.get("start")));
-            event.setEndDate(LocalDate.parse((String) payload.get("end")));
+            event.setTitle(title.trim());
+
+            // Dates
+            String startStr = (String) payload.get("start");
+            String endStr = (String) payload.get("end");
+            if (startStr == null || startStr.trim().isEmpty()) throw new RuntimeException("Start date is required");
+            if (endStr == null || endStr.trim().isEmpty()) throw new RuntimeException("End date is required");
+            event.setStartDate(LocalDate.parse(startStr.trim()));
+            event.setEndDate(LocalDate.parse(endStr.trim()));
 
             Map<String, Object> props = (Map<String, Object>) payload.get("extendedProps");
+            if (props == null) throw new RuntimeException("Extended properties are required");
 
             // Calendar level
             event.setCalendarLevel((String) props.getOrDefault("calendarLevel", "PRIMARY"));
 
-            // Cible
+            // Cibles
             List<String> ciblesStr = (List<String>) props.get("cibles");
-            if (ciblesStr == null || ciblesStr.isEmpty())
-                throw new RuntimeException("Cibles are required");
+            if (ciblesStr == null || ciblesStr.isEmpty()) throw new RuntimeException("Cibles are required");
 
             List<Cible> cibles = new ArrayList<>();
-            for (String c : ciblesStr) {
-                cibles.add(Cible.valueOf(c));
-            }
+            for (String c : ciblesStr) cibles.add(Cible.valueOf(c));
             event.setCibles(cibles);
 
-            // --- Gestion ageMin / ageMax si ENFANT ---
+            // AgeMin / AgeMax if ENFANT
             if (cibles.contains(Cible.ENFANT)) {
                 Object ageMinObj = props.get("ageMin");
                 Object ageMaxObj = props.get("ageMax");
@@ -99,10 +102,10 @@ public class EventController {
                 event.setAgeMin(null);
                 event.setAgeMax(null);
             }
+
             // EventType
             Map<String, Object> typeMap = (Map<String, Object>) props.get("eventType");
-            if (typeMap == null || typeMap.get("id") == null)
-                throw new RuntimeException("Event type is required");
+            if (typeMap == null || typeMap.get("id") == null) throw new RuntimeException("Event type is required");
             Long typeId = Long.valueOf(typeMap.get("id").toString());
             EventType type = eventTypeRepository.findById(typeId)
                     .orElseThrow(() -> new RuntimeException("Event type not found"));
@@ -110,14 +113,14 @@ public class EventController {
 
             // Description
             String description = (String) props.getOrDefault("description", "");
-            event.setDescription(description);
+            event.setDescription(description.trim());
 
-            // Lieu de l'événement
+            // Place
             String place = (String) props.get("place");
-            if (place == null) throw new RuntimeException("Place is required");
-            event.setPlace(place);
+            if (place == null || place.trim().isEmpty()) throw new RuntimeException("Place is required");
+            event.setPlace(place.trim());
 
-            // Fichiers (Base64 + type)
+            // Files
             List<Map<String, String>> files = (List<Map<String, String>>) props.get("files");
             if (files != null) {
                 List<EventFile> eventFiles = new ArrayList<>();
@@ -125,13 +128,13 @@ public class EventController {
                     EventFile ef = new EventFile();
                     ef.setBase64(f.get("base64"));
                     ef.setType(f.get("type"));
-                    ef.setEvent(event); // important pour la relation bidirectionnelle
+                    ef.setEvent(event);
                     eventFiles.add(ef);
                 }
                 event.setFiles(eventFiles);
             }
 
-            // Participants (Mère, Enfant, Famille)
+            // Participants
             List<Map<String, Object>> participantsData = (List<Map<String, Object>>) props.get("participants");
             if (participantsData != null) {
                 List<EventParticipant> participants = new ArrayList<>();
@@ -142,18 +145,11 @@ public class EventController {
                     ep.setPresent((Boolean) p.getOrDefault("present", true));
                     ep.setAbsenceReason((String) p.getOrDefault("absenceReason", null));
 
-                    // Lien vers l'entité correspondante si nécessaire
-                    if (ep.getParticipantType() == ParticipantType.MERE) {
-                        Long mereId = Long.valueOf(p.get("mereId").toString());
-                        ep.setMere(eventService.getMereById(mereId));
-                    } else if (ep.getParticipantType() == ParticipantType.ENFANT) {
-                        Long enfantId = Long.valueOf(p.get("enfantId").toString());
-                        ep.setEnfant(eventService.getEnfantById(enfantId));
-                    } else if (ep.getParticipantType() == ParticipantType.FAMILLE) {
-                        Long familleId = Long.valueOf(p.get("familleId").toString());
-                        ep.setFamille(eventService.getFamilleById(familleId));
+                    switch (ep.getParticipantType()) {
+                        case MERE -> ep.setMere(eventService.getMereById(Long.valueOf(p.get("mereId").toString())));
+                        case ENFANT -> ep.setEnfant(eventService.getEnfantById(Long.valueOf(p.get("enfantId").toString())));
+                        case FAMILLE -> ep.setFamille(eventService.getFamilleById(Long.valueOf(p.get("familleId").toString())));
                     }
-
                     participants.add(ep);
                 }
                 event.setParticipants(participants);
@@ -167,7 +163,6 @@ public class EventController {
             return ResponseEntity.status(500).body(null);
         }
     }
-
 
     // --------------------- GET BY ID ---------------------
     @GetMapping("/{id}")
@@ -183,7 +178,9 @@ public class EventController {
                     map.put("place", ev.getPlace());
                     map.put("ageMin", ev.getAgeMin());
                     map.put("ageMax", ev.getAgeMax());
-                    map.put("cibles", ev.getCibles() != null ? ev.getCibles().stream().map(Enum::name).toList() : null);
+                    map.put("cibles", ev.getCibles() != null
+                            ? ev.getCibles().stream().map(Enum::name).collect(Collectors.toList())
+                            : null);
 
                     // EventType
                     if (ev.getEventType() != null) {
@@ -195,136 +192,131 @@ public class EventController {
                         map.put("eventType", null);
                     }
 
-                    // Participants
+                    map.put("description", ev.getDescription());
+
+                    // Photos
+                    map.put("photos", ev.getFiles().stream()
+                            .map(f -> Map.of("base64", f.getBase64(), "type", f.getType()))
+                            .collect(Collectors.toList()));
+
+                    // Participants grouped by type
                     map.put("meresParticipants", ev.getParticipants().stream()
                             .filter(p -> p.getParticipantType() == ParticipantType.MERE && p.getMere() != null)
                             .map(p -> Map.of(
-                                    "id", p.getId(),
+                                    "id", p.getMere().getId(),
                                     "nom", p.getMere().getNom(),
                                     "prenom", p.getMere().getPrenom(),
                                     "present", p.getPresent(),
                                     "motif", p.getAbsenceReason()
-                            )).toList());
+                            )).collect(Collectors.toList()));
 
                     map.put("enfantsParticipants", ev.getParticipants().stream()
                             .filter(p -> p.getParticipantType() == ParticipantType.ENFANT && p.getEnfant() != null)
                             .map(p -> Map.of(
-                                    "id", p.getId(),
+                                    "id", p.getEnfant().getId(),
                                     "nom", p.getEnfant().getNom(),
                                     "prenom", p.getEnfant().getPrenom(),
                                     "age", p.getEnfant().getAge(),
                                     "present", p.getPresent(),
                                     "motif", p.getAbsenceReason()
-                            )).toList());
+                            )).collect(Collectors.toList()));
 
                     map.put("famillesParticipants", ev.getParticipants().stream()
                             .filter(p -> p.getParticipantType() == ParticipantType.FAMILLE && p.getFamille() != null)
                             .map(p -> Map.of(
-                                    "id", p.getId()
-                            )).toList());
-
+                                    "id", p.getFamille().getId(),
+                                    "present", p.getPresent(),
+                                    "motif", p.getAbsenceReason()
+                            )).collect(Collectors.toList()));
 
                     return ResponseEntity.ok(map);
-                })
-                .orElse(ResponseEntity.notFound().build());
+                }).orElse(ResponseEntity.notFound().build());
     }
 
-
-    // --------------------- DELETE ---------------------
+    // --------------------- DELETE EVENT ---------------------
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteEvent(@PathVariable Long id) {
         eventService.deleteEvent(id);
         return ResponseEntity.noContent().build();
     }
 
-    // --------------------- UPDATE ---------------------
+    // --------------------- UPDATE EVENT ---------------------
     @PutMapping("/{id}")
     public ResponseEntity<Event> updateEvent(@PathVariable Long id, @RequestBody Map<String, Object> payload) {
         try {
             Event existingEvent = eventService.getEventById(id)
                     .orElseThrow(() -> new RuntimeException("Event not found"));
 
-            existingEvent.setTitle((String) payload.get("title"));
-            existingEvent.setStartDate(LocalDate.parse((String) payload.get("start")));
-            existingEvent.setEndDate(LocalDate.parse((String) payload.get("end")));
+            // Title
+            String title = (String) payload.get("title");
+            if (title != null && !title.trim().isEmpty()) existingEvent.setTitle(title.trim());
+
+            // Dates
+            String startStr = (String) payload.get("start");
+            String endStr = (String) payload.get("end");
+            if (startStr != null && !startStr.trim().isEmpty()) existingEvent.setStartDate(LocalDate.parse(startStr.trim()));
+            if (endStr != null && !endStr.trim().isEmpty()) existingEvent.setEndDate(LocalDate.parse(endStr.trim()));
 
             Map<String, Object> props = (Map<String, Object>) payload.get("extendedProps");
+            if (props != null) {
 
-            // Cible
-            // Cible
-            List<String> ciblesStr = (List<String>) props.get("cibles");
-            if (ciblesStr != null && !ciblesStr.isEmpty()) {
-                List<Cible> cibles = new ArrayList<>();
-                for (String c : ciblesStr) {
-                    cibles.add(Cible.valueOf(c));
+                // Cibles
+                List<String> ciblesStr = (List<String>) props.get("cibles");
+                if (ciblesStr != null && !ciblesStr.isEmpty()) {
+                    List<Cible> cibles = new ArrayList<>();
+                    for (String c : ciblesStr) cibles.add(Cible.valueOf(c));
+                    existingEvent.setCibles(cibles);
+
+                    if (cibles.contains(Cible.ENFANT)) {
+                        Object ageMinObj = props.get("ageMin");
+                        Object ageMaxObj = props.get("ageMax");
+                        existingEvent.setAgeMin(ageMinObj != null ? ((Number) ageMinObj).intValue() : null);
+                        existingEvent.setAgeMax(ageMaxObj != null ? ((Number) ageMaxObj).intValue() : null);
+                    } else {
+                        existingEvent.setAgeMin(null);
+                        existingEvent.setAgeMax(null);
+                    }
                 }
-                existingEvent.setCibles(cibles);
 
-                // <-- PLACE ICI LE BLOCS AGE MIN/MAX
-                if (cibles.contains(Cible.ENFANT)) {
-                    Object ageMinObj = props.get("ageMin");
-                    Object ageMaxObj = props.get("ageMax");
-                    existingEvent.setAgeMin(ageMinObj != null ? ((Number) ageMinObj).intValue() : null);
-                    existingEvent.setAgeMax(ageMaxObj != null ? ((Number) ageMaxObj).intValue() : null);
-                } else {
-                    existingEvent.setAgeMin(null);
-                    existingEvent.setAgeMax(null);
+                // EventType
+                Map<String, Object> typeMap = (Map<String, Object>) props.get("eventType");
+                if (typeMap != null && typeMap.get("id") != null) {
+                    Long typeId = Long.valueOf(typeMap.get("id").toString());
+                    EventType type = eventTypeRepository.findById(typeId)
+                            .orElseThrow(() -> new RuntimeException("Event type not found"));
+                    existingEvent.setEventType(type);
                 }
-            }
 
+                // Place & Description
+                String place = (String) props.get("place");
+                if (place != null && !place.trim().isEmpty()) existingEvent.setPlace(place.trim());
+                String description = (String) props.get("description");
+                if (description != null) existingEvent.setDescription(description.trim());
 
-
-            // EventType
-            Map<String, Object> typeMap = (Map<String, Object>) props.get("eventType");
-            if (typeMap == null || typeMap.get("id") == null)
-                throw new RuntimeException("Event type is required");
-            Long typeId = Long.valueOf(typeMap.get("id").toString());
-            EventType type = eventTypeRepository.findById(typeId)
-                    .orElseThrow(() -> new RuntimeException("Event type not found"));
-            existingEvent.setEventType(type);
-
-            // Lieu de l'événement
-            String place = (String) props.get("place");
-            if (place != null) existingEvent.setPlace(place);
-
-            // Description
-            String description = (String) props.getOrDefault("description", existingEvent.getDescription());
-            existingEvent.setDescription(description);
-
-            // Fichiers
-            List<Map<String, String>> files = (List<Map<String, String>>) props.get("files");
-            if (files != null) {
-                List<EventFile> eventFiles = new ArrayList<>();
-                for (Map<String, String> f : files) {
-                    EventFile ef = new EventFile();
-                    ef.setBase64(f.get("base64"));
-                    ef.setType(f.get("type"));
-                    ef.setEvent(existingEvent);
-                    eventFiles.add(ef);
+                // Files
+                List<Map<String, String>> files = (List<Map<String, String>>) props.get("files");
+                if (files != null) {
+                    List<EventFile> newEventFiles = files.stream().map(f -> {
+                        EventFile ef = new EventFile();
+                        ef.setBase64(f.get("base64"));
+                        ef.setType(f.get("type"));
+                        ef.setEvent(existingEvent);
+                        return ef;
+                    }).toList();
+                    List<EventFile> mergedFiles = new ArrayList<>();
+                    if (existingEvent.getFiles() != null) mergedFiles.addAll(existingEvent.getFiles());
+                    mergedFiles.addAll(newEventFiles);
+                    existingEvent.setFiles(mergedFiles);
                 }
-                existingEvent.setFiles(eventFiles);
-            }
 
-            // --------------------- PARTICIPANTS ---------------------
-            // Mères
-            // Mères
-            List<Integer> meresIds = (List<Integer>) props.get("meresParticipants");
-            if (meresIds != null) {
-                existingEvent.setMereParticipants(eventService.getMeresByIds(meresIds)); // <-- setMereParticipants et non setMeresParticipants
+                // Participants (update via IDs)
+                List<Integer> meresIds = (List<Integer>) props.get("meresParticipants");
+                if (meresIds != null) existingEvent.setMereParticipants(eventService.getMeresByIds(meresIds));
+                List<Integer> enfantsIds = (List<Integer>) props.get("enfantsParticipants");
+                if (enfantsIds != null) existingEvent.setEnfantsParticipants(eventService.getEnfantsByIds(enfantsIds));
+                List<Integer> famillesIds = (List<Integer>) props.get("famillesParticipants");
+                if (famillesIds != null) existingEvent.setFamilleParticipants(eventService.getFamillesByIds(famillesIds));
             }
-
-// Enfants
-            List<Integer> enfantsIds = (List<Integer>) props.get("enfantsParticipants");
-            if (enfantsIds != null) {
-                existingEvent.setEnfantsParticipants(eventService.getEnfantsByIds(enfantsIds));
-            }
-
-// Familles
-            List<Integer> famillesIds = (List<Integer>) props.get("famillesParticipants");
-            if (famillesIds != null) {
-                existingEvent.setFamilleParticipants(eventService.getFamillesByIds(famillesIds)); // reste ok
-            }
-
 
             Event saved = eventService.saveEvent(existingEvent);
             return ResponseEntity.ok(saved);
@@ -335,6 +327,7 @@ public class EventController {
         }
     }
 
+    // --------------------- UPDATE EVENT DETAILS ---------------------
     @PutMapping("/details/{id}")
     public ResponseEntity<Event> updateEvent1(@PathVariable Long id, @RequestBody Map<String, Object> payload) {
         try {
@@ -344,33 +337,27 @@ public class EventController {
             Map<String, Object> props = (Map<String, Object>) payload.get("extendedProps");
             if (props != null) {
                 // Description
-                if (props.get("description") != null) {
-                    existingEvent.setDescription((String) props.get("description"));
-                }
+                if (props.get("description") != null)
+                    existingEvent.setDescription(((String) props.get("description")).trim());
 
-                // Fichiers - Updated to clear and add to avoid orphan deletion issues
+                // Files
                 List<Map<String, String>> files = (List<Map<String, String>>) props.get("files");
                 if (files != null) {
-                    // Clear existing files (triggers orphan deletion for old ones)
                     existingEvent.getFiles().clear();
-                    // Add new files
                     for (Map<String, String> f : files) {
                         EventFile ef = new EventFile();
                         ef.setBase64(f.get("base64"));
                         ef.setType(f.get("type"));
-                        ef.setEvent(existingEvent);  // Ensure bidirectional link
+                        ef.setEvent(existingEvent);
                         existingEvent.getFiles().add(ef);
                     }
                 }
 
-                // Participants (unchanged, as it's already using clear/addAll safely)
-                List<Map<String, Object>> meresParticipants = (List<Map<String, Object>>) props.get("meresParticipants");
-                List<Map<String, Object>> enfantsParticipants = (List<Map<String, Object>>) props.get("enfantsParticipants");
-                List<Map<String, Object>> famillesParticipants = (List<Map<String, Object>>) props.get("famillesParticipants");
-
+                // Participants
                 List<EventParticipant> updatedParticipants = new ArrayList<>();
 
-                // Traiter les mères
+                // Mères
+                List<Map<String, Object>> meresParticipants = (List<Map<String, Object>>) props.get("meresParticipants");
                 if (meresParticipants != null) {
                     for (Map<String, Object> p : meresParticipants) {
                         EventParticipant ep = new EventParticipant();
@@ -384,8 +371,9 @@ public class EventController {
                     }
                 }
 
-                // Traiter les enfants
-                if (enfantsParticipants != null) {
+                // Enfants (ajout uniquement si l'événement contient la cible ENFANT)
+                List<Map<String, Object>> enfantsParticipants = (List<Map<String, Object>>) props.get("enfantsParticipants");
+                if (enfantsParticipants != null && existingEvent.getCibles() != null && existingEvent.getCibles().contains(Cible.ENFANT)) {
                     for (Map<String, Object> p : enfantsParticipants) {
                         EventParticipant ep = new EventParticipant();
                         ep.setEvent(existingEvent);
@@ -398,7 +386,8 @@ public class EventController {
                     }
                 }
 
-                // Traiter les familles
+                // Familles
+                List<Map<String, Object>> famillesParticipants = (List<Map<String, Object>>) props.get("famillesParticipants");
                 if (famillesParticipants != null) {
                     for (Map<String, Object> p : famillesParticipants) {
                         EventParticipant ep = new EventParticipant();
@@ -412,7 +401,6 @@ public class EventController {
                     }
                 }
 
-                // ✅ Mettre à jour les participants de manière safe
                 existingEvent.getParticipants().clear();
                 existingEvent.getParticipants().addAll(updatedParticipants);
             }
@@ -426,10 +414,7 @@ public class EventController {
         }
     }
 
-
-
-
-    // --------------------- GET BY TYPE ---------------------
+    // --------------------- GET EVENTS BY TYPE ---------------------
     @GetMapping("/by-type/{typeId}")
     public List<Event> getEventsByType(@PathVariable Long typeId) {
         return eventService.getEventsByType(typeId);
